Placing keyframe outside of NLA Strip frame range while in Tweak Mode no longer possible #63675

Closed
opened 2019-04-17 07:10:09 +02:00 by Bun ny · 15 comments

Update: The crash described below has already been fixed, but the fix blocks previously working functionality.

System Information
Operating system: Windows 7 x64
Graphics card: NVIDIA GeForce GTX 580

Blender Version
Broken: 2.80 e2102e9917
Worked: 2.79

Placing a keyframe outside of the range of an NLA Strip while in Tweak Mode crashes Blender entirely. System console reports: "Attempt to free NULL pointer"

Exact steps for others to reproduce the error
Open attached .blend, enter Tweak Mode on the NLA strip, move to a frame outside the NLA strip's frame range, translate the Cube and insert a keyframe.

tweak_bug.blend

Another mutation of this issue has been reported in #75804

In #75804#911738, @Rosalie wrote:
An other odd behavior is that if one of the end key frames are moved to lengthen the animation, you will also get the error if you try to add an animation in what used to be out of the range of the animation before you started editing. If you stop editing the stashed animation and start again, you will be able to add frames now.

Exact steps for others to reproduce the error
1- Default Startup.
2- Select Cube, create new Action and add keys at 0 and 10 frame in position, rotation or scale.
3- Go to the NLA editor, add the New Action to the NLATrack
4- Click the ActionClip and right click (or shift-tab) "Start editing stashed action".
5- In the Dope Sheet, Graph or Action editor, Move the keyframe that is at frame 10 to frame 20
6- Add key frame after frame 15 using Insert Key frame shortcut (i).

The expected behavior is that I should be able to add a key frame anywhere on my timeline without having to get out of Editing Stashed Action mode.

**Update**: The crash described below has already been fixed, but the fix blocks previously working functionality. **System Information** Operating system: Windows 7 x64 Graphics card: NVIDIA GeForce GTX 580 **Blender Version** Broken: 2.80 e2102e991764 Worked: 2.79 Placing a keyframe outside of the range of an NLA Strip while in Tweak Mode crashes Blender entirely. System console reports: "Attempt to free NULL pointer" **Exact steps for others to reproduce the error** Open attached .blend, enter Tweak Mode on the NLA strip, move to a frame outside the NLA strip's frame range, translate the Cube and insert a keyframe. [tweak_bug.blend](https://archive.blender.org/developer/F6953473/tweak_bug.blend) Another mutation of this issue has been reported in #75804 > In #75804#911738, @Rosalie wrote: > An other odd behavior is that if one of the end key frames are moved to lengthen the animation, you will also get the error if you try to add an animation in what used to be out of the range of the animation before you started editing. If you stop editing the stashed animation and start again, you will be able to add frames now. > > **Exact steps for others to reproduce the error** > 1- Default Startup. > 2- Select Cube, create new Action and add keys at 0 and 10 frame in position, rotation or scale. > 3- Go to the NLA editor, add the New Action to the NLATrack > 4- Click the ActionClip and right click (or shift-tab) "Start editing stashed action". > 5- In the Dope Sheet, Graph or Action editor, Move the keyframe that is at frame 10 to frame 20 > 6- Add key frame after frame 15 using Insert Key frame shortcut (i). > > The expected behavior is that I should be able to add a key frame anywhere on my timeline without having to get out of Editing Stashed Action mode.
Author

Added subscriber: @bunny

Added subscriber: @bunny

#75804 was marked as duplicate of this issue

#75804 was marked as duplicate of this issue

#68158 was marked as duplicate of this issue

#68158 was marked as duplicate of this issue

Added subscribers: @LazyDodo, @ZedDB

Added subscribers: @LazyDodo, @ZedDB

Can't reproduce this on my end. Even with ASAN, I do not get any errors when following the reproduction steps.

@LazyDodo can you reproduce this?

Can't reproduce this on my end. Even with ASAN, I do not get any errors when following the reproduction steps. @LazyDodo can you reproduce this?
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Asserts for me:

Attempt to free NULL pointer

1  raise                                                 0x7ffff0aa853f 
2  abort                                                 0x7ffff0a92895 
3  MEM_lockfree_freeN       mallocn_lockfree_impl.c 128  0x1dbbba4      
4  insert_keyframe          keyframing.c            1516 0x256babc      
5  ANIM_apply_keyingset     keyingsets.c            1127 0x257049a      
6  insert_key_exec          keyframing.c            1838 0x256c2bc      
7  insert_key_menu_invoke   keyframing.c            1972 0x256c6f2

checking further...

Asserts for me: `Attempt to free NULL pointer` ``` 1 raise 0x7ffff0aa853f 2 abort 0x7ffff0a92895 3 MEM_lockfree_freeN mallocn_lockfree_impl.c 128 0x1dbbba4 4 insert_keyframe keyframing.c 1516 0x256babc 5 ANIM_apply_keyingset keyingsets.c 1127 0x257049a 6 insert_key_exec keyframing.c 1838 0x256c2bc 7 insert_key_menu_invoke keyframing.c 1972 0x256c6f2 ``` checking further...
Member

Added subscriber: @Angeloss

Added subscriber: @Angeloss

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

I can't reproduce this either, on Linux or on Windows 10. Blender just tells me "Warning: Keying set failed to insert any keyframes" and that's it.

I can't reproduce this either, on Linux or on Windows 10. Blender just tells me "Warning: Keying set failed to insert any keyframes" and that's it.
Author

Sometime since submitting this bug report the behavior @dr.sybren mentions was added, which doesn't insert any keyframes and displays a warning. However, with this "fix," the useful functionality of 2.79 and previous, where the user could insert a keyframe beyond the strip range during tweak mode, is lost. This was especially useful for animation layering, which is a lot more doable in 2.8 and could make good use of the prior functionality.

Sometime since submitting this bug report the behavior @dr.sybren mentions was added, which doesn't insert any keyframes and displays a warning. However, with this "fix," the useful functionality of 2.79 and previous, where the user could insert a keyframe beyond the strip range during tweak mode, is lost. This was especially useful for animation layering, which is a lot more doable in 2.8 and could make good use of the prior functionality.
Sybren A. Stüvel changed title from Placing keyframe outside of NLA Strip frame range while in Tweak Mode crashes Blender to Placing keyframe outside of NLA Strip frame range while in Tweak Mode no longer possible 2019-12-13 14:45:22 +01:00

I've marked this task as a To Do, as the originally described bug has already been fixed, but I do want to keep this around as a good idea to implement at some point.

I've marked this task as a To Do, as the originally described bug has already been fixed, but I do want to keep this around as a good idea to implement at some point.
Member

Added subscriber: @Rosalie

Added subscriber: @Rosalie

This issue was referenced by 89ee260ef2

This issue was referenced by 89ee260ef22e27c9064dad54331c4c595f23b7e5

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sybren A. Stüvel self-assigned this 2020-08-20 17:28:05 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63675
No description provided.